fixed: attachment icon alignment

--- a/src/assets/styles/framework.css
+++ b/src/assets/styles/framework.css
@@ -1739,6 +1739,7 @@ toast.visible {
 	transition: all .12s ease;
 	width: 100%;
 	text-decoration: none;
+	align-items: center;
 }
 
 .attachment svg {
